# the-mendimeter

./: CMakeLists.txt  LICENSE  Pipfile  README.md  USAGE.md  camera_calibration.yml
.github/workflows/: standalone.yml
cmake/: tools.cmake
documentation/: CMakeLists.txt  conf.py
include/greeter/: greeter.h
include/mendimeter/: greeter.h
scripts/: calibrate.py  common.py  mendimeter.ipynb  mendimeter.py
source/: calibration.cpp  greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
